--- a/templates/question1.html
+++ b/templates/question1.html
@@ -27,8 +27,7 @@
         <input type="submit" class= "btn btn-warning" name = "choice"/>
       </form>
       <img
-        src="https://cdn.glitch.global/08999ff8-10a0-41b8-b47f-674efd911411/Screenshot%202024-11-29%20at%2010.27.47%E2%80%AFAM.png?v=1732894092760"
-        alt="question1"
+        src="https://ibb.co/cQScnQ0"
         width="800" 
         height="700"/>
 
