--- a/templates/question1.html
+++ b/templates/question1.html
@@ -27,7 +27,7 @@
         <input type="submit" class= "btn btn-warning" name = "choice"/>
       </form>
       <img
-        src="https://ibb.co/cQScnQ0"
+        src="https://ibb.co/vcqB1ZW"
         width="800" 
         height="700"/>
 
