--- a/templates/question1N.html
+++ b/templates/question1N.html
@@ -36,8 +36,7 @@
     </form>
       -->
       <img
-        src="https://cdn.glitch.global/08999ff8-10a0-41b8-b47f-674efd911411/Screenshot%202024-11-29%20at%2010.56.21%E2%80%AFAM.png?v=1732895824517"
-        alt="gru image"
+        src="https://ibb.co/6bng9wH"
         width="800"
         height="700">
     
