--- a/templates/question2.html
+++ b/templates/question2.html
@@ -29,8 +29,7 @@
     
       
       <img
-        src="https://cdn.glitch.global/4525e3ab-3553-4987-8263-482c1b9ef2fa/gru%20date.png?v=1723767216798"
-        alt="gru image"
+        src="https://ibb.co/6PCX1RP"
         width="1500"
         height="500">
     
