--- a/templates/question2N.html
+++ b/templates/question2N.html
@@ -26,8 +26,7 @@
     </form>
 
         <img
-        src="https://cdn.glitch.global/4525e3ab-3553-4987-8263-482c1b9ef2fa/download%20(1).png?v=1723833864799"
-        alt="gru image"
+        src="https://ibb.co/DG9CJVC"
         width="408"
         height="600">
     
